[metadata]
name = dynamodb-backup
version = attr: dynamodb_backup.version
description = Backup a DynamoDB table to an Avro container
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = BSD 3-Clause License
license-file = LICENSE
home-page = https://github.com/gmr/dynamodb-backup
project_urls =
    Bug Tracker = https://github.com/gmr/dynamodb-backup/issues
    Source Code = https://github.com/gmr/dynamodb-backup/
author = Gavin M. Roy
author_email = gavinmroy@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
requires-dist = setuptools
keywords =
    dynamodb
    avro
    backup

[options]
include_package_data = True
install_requires =
    boto3
    coloredlogs
    fastavro
    httpx
packages = dynamodb_backup
zip_safe = false

[options.extras_require]
snappy =
    python-snappy==0.5
test =
    coverage
    flake8
    flake8-comprehensions
    flake8-deprecated
    flake8-import-order
    flake8-print
    flake8-quotes
    flake8-rst-docstrings
    flake8-tuple
    nose

[options.entry_points]
console_scripts=
    dynamodb-backup = dynamodb_backup.cli:main

[coverage:run]
branch = True
data_file = build/.coverage

[flake8]
application-import-names = dynamodb_backup
exclude = build,env
import-order-style = google

[mypy-arrow]
ignore_missing_imports = True

[nosetests]
cover-branches = 1
cover-html = true
cover-html-dir = build/coverage
cover-package = dynamodb_backup
cover-xml = true
cover-xml-file = build/coverage.xml
logging-level = DEBUG
verbosity = 2
with-coverage = 1
with-xunit = true
xunit-file = build/nosetests.xml
